--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
-spring.datasource.url=${SPRING_DATASOURCE_URL}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.url=jdbc:mysql://localhost:/bdmicroservice
+spring.datasource.username=root
 #spring.datasource.password=
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
@@ -13,3 +13,4 @@ server.port=8023
 
 #spring.security.user.name=admin
 #spring.security.user.password=1234
+
